--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "query-string": "^6.12.1",
+    "react": "^16.13.1"
   }
 }
