--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mysql": "^2.17.1",
     "query-string": "^6.12.1",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "underscore": "^1.10.2"
   }
 }
