--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "underscore": "^1.10.2"
